[package]
name = "bevy-unfair-tennis"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# # Dependencies for native only.
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# bevy = { version = "0.6.1", default-features = false, features = [
#     "render",
#     "bevy_winit",
#     "png",
#     "hdr",
#     "x11",
#     "filesystem_watcher",
# ] }

# # Dependencies for WASM only.
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# bevy = { version = "0.6.1", default-features = false, features = [
#     "render",
#     "bevy_winit",
#     "png",
#     "hdr",
#     "x11",
#     "filesystem_watcher",
# ] }

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = [
    "render",
    "bevy_winit",
    "png",
    "hdr",
    "x11",
] }
bevy_easings = "0.6.0"
bevy_rapier3d = "0.12.1"
rand = "0.8.5"
tap = "1.0.1"

# [profile.release]
# lto = "thin"
# opt-level = "s"
# strip = true
