[package]
name = "bevy-unfair-tennis"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = [
    "render",
    "bevy_winit",
    "png",
    "x11",
] }
bevy_easings = "0.6.0"
bevy_rapier3d = "0.12.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = "z"
strip = true
