[package]
name = "bevy-sports-unfair-tennis"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.6.1"
default-features = false
features = ["render", "bevy_winit", "png", "x11"]

[dependencies]
bevy_easings = "0.6.0"
bevy-inspector-egui = "0.8.2"
bevy_prototype_lyon = "0.4.0"
bevy_rapier3d = "0.12.1"
rand = "0.8.5"

[profile.dev]
incremental = true
# opt-level = 1

# Enable high optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
